k8s_prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestao-garantias-frontend-prod
  namespace: gestao-garantias-prod
spec:
  selector:
    matchLabels:
      app: gestao-garantias-frontend-prod
  replicas: 1
  template:
    metadata:
      labels:
        app: gestao-garantias-frontend-prod
    spec:
      containers:
        - name: gestao-garantias-frontend-prod
          image: mimontreal/k8s_gestao_garantias_frontend_prod:TAGIMG
          resources:
            requests:
              memory: '10Mi'
              cpu: '10m'
            limits:
              memory: '1Gi'
              cpu: '1'
