k8s_prod/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gestao-garantias-frontend-prod
  namespace: gestao-garantias-prod
spec:
  selector:
    app: gestao-garantias-frontend-prod
  ports:
    - port: 80
      targetPort: 80
